--- a/css/custom.css
+++ b/css/custom.css
@@ -8,3 +8,10 @@
 .project-hover {
   cursor: url(../images/slide/1bookL.png), auto;
 }
+
+footer .contact-form-widget .form-control {
+    background-color: transparent;
+    border: 1px solid rgba(204, 204, 204, 1);
+    color: rgba(96, 155, 255, 1); /*#ececec*/
+    font-weight: normal
+}
