--- a/css/custom.css
+++ b/css/custom.css
@@ -15,3 +15,46 @@ footer .contact-form-widget .form-control {
     color: rgba(96, 155, 255, 1); /*#ececec*/
     font-weight: normal
 }
+
+/*Slider Cursor*/
+.carousel-control.left:hover {
+    cursor: url(../images/slide/peacock-02.png), auto;
+}
+
+.carousel-control.right:hover {
+    cursor: url(../images/slide/peacock-01.png), auto;
+}
+
+/*Heading Decoration Fix*/
+.heading:before,
+.heading-left:before,
+.heading-right:before {
+    width: 30px;
+    bottom: -224px;
+}
+
+.heading:after,
+.heading-left:after,
+.heading-right:after {
+    width: 40px;
+    bottom: -229px;
+}
+
+/*.menu-transparent.push-top {
+    margin-top: 30px
+}*/
+
+/*@media (max-width: 992px) {
+    .navbar-header {
+      top:0px;
+    }
+    .main-nav {
+        top:0px;
+    }
+}*/
+
+/*For responsive.css to fix parallax*/
+.parallax {
+    background-position: center;
+    background-attachment: scroll;
+}
