--- a/css/custom.css
+++ b/css/custom.css
@@ -75,9 +75,19 @@ footer .contact-form-widget .form-control {
 }*/
 
 /*For responsive.css to fix parallax*/
-.parallax {
+/*.parallax {
     background-position: center;
     background-attachment: scroll;
+}*/
+.parallax-mobile {
+
+}
+
+@media (max-width:400px) {
+  .parallax-mobile {
+      background-position: center;
+      background-attachment: scroll;
+  }
 }
 
 /*Mobile Hide*/
